[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
name = "wgpu_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-tutorial"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.4"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16.0"
